# runnerJeju

./: .gitignore  README.md
app/: README.md
app/android/app/: build.gradle.kts
app/ios/Runner.xcodeproj/: project.pbxproj
docs/: architecture.md  commit-convention.md  setup.md
frontend/app/: pubspec.yaml
frontend/app/ios/Runner/: Info.plist
frontend/app/lib/: main.dart
frontend/app/lib/api/: course_api.dart  ping_api.dart  run_api.dart  stamp_api.dart  verification_api.dart
frontend/app/lib/config/: app_config.dart
frontend/app/lib/models/: geo_point.dart  run_record.dart  run_stamp.dart  run_verification.dart  running_course.dart
frontend/app/lib/network/: api_client.dart
frontend/app/lib/screens/: app_shell.dart  connection_test_screen.dart
frontend/app/lib/services/: course_service.dart  location_service.dart  ping_service.dart  run_service.dart  run_tracker.dart  service_locator.dart  stamp_service.dart  (+1 more)
frontend/app/test/: widget_test.dart
infra/: docker-compose.yml
server/: pyproject.toml
server/app/: db.py  deps.py  main.py  models.py  schemas.py  verification.py
server/app/routers/: courses.py  runs.py  stamps.py  verifications.py
server/app/runners_jeju/: README.md  pubspec.yaml
server/app/runners_jeju/android/app/: build.gradle.kts
server/app/runners_jeju/android/app/src/main/: AndroidManifest.xml
server/app/runners_jeju/android/app/src/main/kotlin/com/example/runners_jeju/: MainActivity.kt
server/app/runners_jeju/ios/Runner.xcodeproj/: project.pbxproj
server/app/runners_jeju/test/: widget_test.dart
(+18 files in other folders)
